--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DI - Projeto HTML</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -15,11 +16,11 @@
       <h2 class="heading">DOCUMENTO DE IMPLEMENTAÇÃO DE ALIANÇAS</h2>
       <div class="controls">
         <input type="text" id="name" class="floatLabel" name="name">
-        <label for="name">Name</label>
+        <label for="name">A Empresa</label>
       </div>
       <div class="controls">
         <input type="text" id="email" class="floatLabel" name="email">
-        <label for="email">Email</label>
+        <label for="email">Link da proposta</label>
       </div>
       <div class="controls">
         <input type="tel" id="phone" class="floatLabel" name="phone">
@@ -124,6 +125,7 @@
       </div>
     </div>
   </form>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
