--- a/assets/pages/acao.html
+++ b/assets/pages/acao.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DI - Briefing Comercial</title>
+  <title>DI - Ação de resgate</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
   <dir>
     <h1 id="name">Documento de Implementação de Alianças</h1>
   </dir>
@@ -15,7 +15,7 @@
   <dir>
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./index.html">Briefing</a>
+        <a class="nav-link" aria-current="page" href="/assets/index.html">Briefing</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/assets/pages/desenho.html">Desenho</a>
@@ -24,7 +24,7 @@
         <a class="nav-link" href="/assets/pages/configuracao.html">Configuração</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/acao.html">Ação</a>
+        <a class="nav-link active" href="/assets/pages/acao.html">Ação</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/assets/pages/endereco.html">Endereço</a>
@@ -32,6 +32,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/assets/pages/templates.html">Templates</a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" href="/assets/pages/informacao.html">Informação</a>
       </li>
@@ -54,7 +55,7 @@
   <body>
     <main id="container">
       <section id="about-container">
-        <h3 id="h3-container">BRIEFING - Comercial</h3>
+        <h3 id="h3-container">AÇÃO PARA RESGATAR O VOUCHER - Atendimento</h3>
         <form>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">A Empresa</label>
