--- a/assets/pages/templates.html
+++ b/assets/pages/templates.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DI - Briefing Comercial</title>
+  <title>DI - Templates</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
   <dir>
     <h1 id="name">Documento de Implementação de Alianças</h1>
   </dir>
@@ -15,7 +15,7 @@
   <dir>
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="./index.html">Briefing</a>
+        <a class="nav-link" aria-current="page" href="/assets/index.html">Briefing</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/assets/pages/desenho.html">Desenho</a>
@@ -30,8 +30,9 @@
         <a class="nav-link" href="/assets/pages/endereco.html">Endereço</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/templates.html">Templates</a>
+        <a class="nav-link active" href="/assets/pages/templates.html">Templates</a>
       </li>
+
       <li class="nav-item">
         <a class="nav-link" href="/assets/pages/informacao.html">Informação</a>
       </li>
@@ -54,7 +55,7 @@
   <body>
     <main id="container">
       <section id="about-container">
-        <h3 id="h3-container">BRIEFING - Comercial</h3>
+        <h3 id="h3-container">TEMPLATES - Marqueting</h3>
         <form>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">A Empresa</label>
@@ -142,14 +143,14 @@
             <label for="formGroupExampleInput" class="form-label">Ativação do Voucher</label>
             <div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="ambiente" id="ambiente2" value="option2">
-                <label class="form-check-label" for="ambiente2">
+                <input class="form-check-input" type="radio" name="ambiente" id="ambiente1" value="option1">
+                <label class="form-check-label" for="ambiente1">
                   Ambiente normal
                 </label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="ambiente" id="ambiente1" value="option1" checked>
-                <label class="form-check-label" for="ambiente1">
+                <input class="form-check-input" type="radio" name="ambiente" id="ambiente2" value="option2" checked>
+                <label class="form-check-label" for="ambiente2">
                   Ambiente personalizado
                 </label>
               </div>
