Atualizaçoes do padrao de cores

--- a/assets/pages/prizes.html
+++ b/assets/pages/prizes.html
@@ -55,7 +55,7 @@
   <body>
     <main id="container">
       <section id="about-container">
-        <h3 id="h3-container">INCLUSÂO DOS PRIZES NAS EXPERIÊNCIAS</h3>
+        <h3 id="h3-container">INCLUSÃO DOS PRIZES NAS EXPERIÊNCIAS</h3>
         <form>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">A Empresa</label>
