--- a/assets/index.html
+++ b/assets/index.html
@@ -9,42 +9,48 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <div class="cabecalho">
-    <dir class="margin">
-      <h1 id="name">Documento de Implementação de Alianças</h1>
-      <img src="/assets/img/minu.co copy 3@3x.png" width="100">
-    </dir>
+    <div>
+      <dir>
+        <div id="logoPosition">
+          <img src="/assets/img/minu.co alpha 3@3x.png" width="200">
+        </div>
+        <dir class="margin">
+          <h1 id="name">Documento de Implementação de Alianças</h1>
+        </dir>
+      </dir>
+    </div>
 
     <dir class="tab">
       <ul class="nav nav-tabs nav-fill">
         <li class="nav-item">
-          <a class="nav-link active aria-current="page" href="./index.html">Briefing</a>
+          <a class="nav-link active aria-current=" page" href="./index.html">Briefing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/desenho.html">Desenho</a>
+          <a class="nav-link tabOff" href="/assets/pages/desenho.html">Desenho</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/configuracao.html">Configuração</a>
+          <a class="nav-link tabOff" href="/assets/pages/configuracao.html">Configuração</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/acao.html">Ação</a>
+          <a class="nav-link tabOff" href="/assets/pages/acao.html">Ação</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/endereco.html">Endereço</a>
+          <a class="nav-link tabOff" href="/assets/pages/endereco.html">Endereço</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/templates.html">Templates</a>
+          <a class="nav-link tabOff" href="/assets/pages/templates.html">Templates</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/informacao.html">Informação</a>
+          <a class="nav-link tabOff" href="/assets/pages/informacao.html">Informação</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/tarifas.html">Tarifas</a>
+          <a class="nav-link tabOff" href="/assets/pages/tarifas.html">Tarifas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/prizes.html">Prizes</a>
+          <a class="nav-link tabOff" href="/assets/pages/prizes.html">Prizes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/assets/pages/catalogoItau.html">Catálogo Itaú</a>
+          <a class="nav-link tabOff" href="/assets/pages/catalogoItau.html">Catálogo Itaú</a>
         </li>
       </ul>
     </dir>
