--- a/assets/index.html
+++ b/assets/index.html
@@ -19,40 +19,41 @@
         </dir>
       </dir>
     </div>
-
-    <dir class="tab">
-      <ul class="nav nav-tabs nav-fill">
-        <li class="nav-item">
-          <a class="nav-link active aria-current=" page" href="./index.html">Briefing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/desenho.html">Desenho</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/configuracao.html">Configuração</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/acao.html">Ação</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/endereco.html">Endereço</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/templates.html">Templates</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/informacao.html">Informação</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/tarifas.html">Tarifas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/prizes.html">Prizes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tabOff" href="/assets/pages/catalogoItau.html">Catálogo Itaú</a>
-        </li>
-      </ul>
+    <div id="tituloLogo">
+      <dir class="tab">
+        <ul class="nav nav-tabs nav-fill">
+          <li class="nav-item">
+            <a class="nav-link active aria-current=" page" href="./index.html">Briefing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/desenho.html" style="color:#04da83;">Desenho</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/configuracao.html" style="color:#04da83;">Configuração</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/acao.html" style="color:#04da83;">Ação</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/endereco.html" style="color:#04da83;">Endereço</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/templates.html" style="color:#04da83;">Templates</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/informacao.html" style="color:#04da83;">Informação</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/tarifas.html" style="color:#04da83;">Tarifas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/prizes.html" style="color:#04da83;">Prizes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/catalogoItau.html" style="color:#04da83;">Catálogo Itaú</a>
+          </li>
+        </ul>
+    </div>
     </dir>
   </div>
 </head>
