--- a/assets/pages/desenho.html
+++ b/assets/pages/desenho.html
@@ -4,165 +4,171 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DI - Desenho da solução</title>
+  <title>DI - Briefing Comercial</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/styles.css">
-  <dir>
-    <h1 id="name">Documento de Implementação de Alianças</h1>
-  </dir>
-
-  <dir>
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="/assets/index.html">Briefing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="/assets/pages/desenho.html">Desenho</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/configuracao.html">Configuração</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/acao.html">Ação</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/endereco.html">Endereço</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/templates.html">Templates</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/informacao.html">Informação</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/tarifas.html">Tarifas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/prizes.html">Prizes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/assets/pages/catalogoItau.html">Catálogo Itaú</a>
-      </li>
-    </ul>
+  <div class="cabecalho">
+    <div>
+      <dir>
+        <div id="logoPosition">
+          <img src="/assets/img/minu.co alpha 3@3x.png" width="200">
+        </div>
+        <dir class="margin">
+          <h1 id="name">Documento de Implementação de Alianças</h1>
+        </dir>
+      </dir>
     </div>
+    <div id="tituloLogo">
+      <dir class="tab">
+        <ul class="nav nav-tabs nav-fill">
+          <li class="nav-item">
+            <a class="nav-link tabOff aria-current=" page" href="/assets/index.html" style="color:#04da83">Briefing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/assets/pages/desenho.html";>Desenho</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/configuracao.html" style="color:#04da83;">Configuração</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/acao.html" style="color:#04da83;">Ação</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/endereco.html" style="color:#04da83;">Endereço</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/templates.html" style="color:#04da83;">Templates</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/informacao.html" style="color:#04da83;">Informação</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/tarifas.html" style="color:#04da83;">Tarifas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/prizes.html" style="color:#04da83;">Prizes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link tabOff" href="/assets/pages/catalogoItau.html" style="color:#04da83;">Catálogo Itaú</a>
+          </li>
+        </ul>
     </div>
-    </nav>
-    </div>
+    </dir>
+  </div>
 </head>
 
-  <body>
-    <main id="container">
-      <section id="about-container">
-        <h3 id="h3-container">DESENHO DA SOLUÇÃO – Comercial/Atendimento</h3>
-        <form>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">A Empresa</label>
-            <input class="form-control" id="exampleFormControlTextarea1" rows="3"></input>
-          </div>
-          <div class="mb-3">
-            <label for="formFile" class="form-label">Proposta Comercial</label>
-            <input class="form-control" type="file" id="formFile">
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">OFERTA(S) – Criar opção para adicionar novas
-              ofertas</label>
-            <input class="form-control" id="exampleFormControlTextarea1" rows="3"></input>
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">DESCRIÇÃO DA OFERTA (Lim. 500
-              caracteres)</label>
-            <input class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="500"></input>
-          </div>
-          <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label">ABRANGÊNCIA DE UTILIZAÇÃO (criar 2 opções: Nacional e
-              mais informações)</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
-          </div>
-          <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label">PRAZO DE UTILIZAÇÃO (Colocar uma descrição informando
-              a
-              diferente de 30 e 90 dias)</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
-          </div>
-          <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label">CANCELAMENTO (POLÍTICA DO PARCEIRO) (Parceiro informar
-              sua política de cancelamento)</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
-          </div>
-          <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label">Operadoras participantes </label>
-            <dir>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                <label class="form-check-label" for="inlineCheckbox1">Claro</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                <label class="form-check-label" for="inlineCheckbox2">CTBC</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                <label class="form-check-label" for="inlineCheckbox3">NEXTEL</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                <label class="form-check-label" for="inlineCheckbox4">Oi</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                <label class="form-check-label" for="inlineCheckbox5">Sercomtel</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
-                <label class="form-check-label" for="inlineCheckbox6">TIM</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="option7">
-                <label class="form-check-label" for="inlineCheckbox7">Vivo</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="option8" disabled>
-                <label class="form-check-label" for="inlineCheckbox8">Claro Chile</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox9" value="option9" disabled>
-                <label class="form-check-label" for="inlineCheckbox9">Movistar Chile</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox10" value="option10" disabled>
-                <label class="form-check-label" for="inlineCheckbox10">WOM Chile</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="inlineCheckbox11" value="option11">
-                <label class="form-check-label" for="inlineCheckbox11">Outras</label>
-              </div>
-          </div>
+<body>
+  <main>
+    <section id="about-container">
+      <h3 id="cabecalho">BRIEFING - Comercial</h3>
+      <form>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">A Empresa</label>
+          <input class="form-control" id="exampleFormControlTextarea1" rows="3"></input>
+        </div>
+        <div class="mb-3">
+          <label for="formFile" class="form-label">Proposta Comercial</label>
+          <input class="form-control" type="file" id="formFile">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">OFERTA(S) – Criar opção para adicionar novas
+            ofertas</label>
+          <input class="form-control" id="exampleFormControlTextarea1" rows="3"></input>
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">DESCRIÇÃO DA OFERTA (Lim. 500
+            caracteres)</label>
+          <input class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="500"></input>
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">ABRANGÊNCIA DE UTILIZAÇÃO (criar 2 opções: Nacional e
+            mais informações)</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">PRAZO DE UTILIZAÇÃO (Colocar uma descrição informando
+            a
+            diferente de 30 e 90 dias)</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">CANCELAMENTO (POLÍTICA DO PARCEIRO) (Parceiro informar
+            sua política de cancelamento)</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">Operadoras participantes </label>
+          <dir>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+              <label class="form-check-label" for="inlineCheckbox1">Claro</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+              <label class="form-check-label" for="inlineCheckbox2">CTBC</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">NEXTEL</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+              <label class="form-check-label" for="inlineCheckbox4">Oi</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+              <label class="form-check-label" for="inlineCheckbox5">Sercomtel</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
+              <label class="form-check-label" for="inlineCheckbox6">TIM</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox7" value="option7">
+              <label class="form-check-label" for="inlineCheckbox7">Vivo</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox8" value="option8" disabled>
+              <label class="form-check-label" for="inlineCheckbox8">Claro Chile</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox9" value="option9" disabled>
+              <label class="form-check-label" for="inlineCheckbox9">Movistar Chile</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox10" value="option10" disabled>
+              <label class="form-check-label" for="inlineCheckbox10">WOM Chile</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox11" value="option11">
+              <label class="form-check-label" for="inlineCheckbox11">Outras</label>
+            </div>
+        </div>
+        <div>
+          <label for="formGroupExampleInput" class="form-label">Ativação do Voucher</label>
           <div>
-            <label for="formGroupExampleInput" class="form-label">Ativação do Voucher</label>
-            <div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="ambiente" id="ambiente2" value="option2">
-                <label class="form-check-label" for="ambiente2">
-                  Ambiente normal
-                </label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="ambiente" id="ambiente1" value="option1" checked>
-                <label class="form-check-label" for="ambiente1">
-                  Ambiente personalizado
-                </label>
-              </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="ambiente" id="ambiente1" value="option1" checked>
+              <label class="form-check-label" for="ambiente1">
+                Ambiente normal
+              </label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="ambiente" id="ambiente2" value="option2">
+              <label class="form-check-label" for="ambiente2">
+                Ambiente personalizado
+              </label>
             </div>
           </div>
-      </section>
-    </main>
+        </div>
+    </section>
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
+  </script>
 
-  </body>
+</body>
 
 </html>
