Layout base finalizado, campos link proposta e link contrato OK, submit e obrigatoriedade do preenchimento.

--- a/assets/pages/desenho.html
+++ b/assets/pages/desenho.html
@@ -8,6 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/styles.css">
+
+  <!--INÍCIO DO CABEÇALHO-->
+
   <div class="cabecalho">
     <div>
       <dir>
@@ -19,6 +22,9 @@
         </dir>
       </dir>
     </div>
+
+    <!--INÍCIO DA BARRA DE NAVEGAÇÃO-->
+
     <div id="tituloLogo">
       <dir class="tab">
         <ul class="nav nav-tabs nav-fill">
@@ -26,7 +32,7 @@
             <a class="nav-link tabOff aria-current=" page" href="/assets/index.html" style="color:#04da83">Briefing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/assets/pages/desenho.html";>Desenho</a>
+            <a class="nav-link active" href="/assets/pages/desenho.html" ;>Desenho</a>
           </li>
           <li class="nav-item">
             <a class="nav-link tabOff" href="/assets/pages/configuracao.html" style="color:#04da83;">Configuração</a>
@@ -54,11 +60,20 @@
           </li>
         </ul>
     </div>
-    </dir>
+
+    <!--FIM DA BARRA DE NAVEGAÇÃO-->
+
   </div>
+
+  <!--FIM DO CABEÇALHO-->
+
 </head>
 
+
 <body>
+
+<!--INÍCIO DO FORMULÁRIO-->
+
   <main>
     <section id="about-container">
       <h3 id="cabecalho">BRIEFING - Comercial</h3>
@@ -164,6 +179,8 @@
         </div>
     </section>
   </main>
+
+  <!--FIM DO FORMULÁRIO-->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
