--- a/Formulario_DI-HTML/index.html
+++ b/Formulario_DI-HTML/index.html
@@ -7,7 +7,7 @@
   <title>DI - Briefing Comercial</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link href="./assets/css/style.css" rel="stylesheet" >
 
   <!--INÍCIO DO CABEÇALHO-->
 
@@ -15,7 +15,7 @@
     <div>
       <dir>
         <div id="logoPosition">
-          <img src="/assets/img/minu.co alpha 3@3x.png" width="200">
+          <img src="./assets/img/logoMinuAlpha.png" width="200">
         </div>
         <dir class="margin">
           <h1 id="name">Documento de Implementação de Alianças</h1>
@@ -204,7 +204,7 @@
 
   <!--FIM DO FORMULÁRIO-->
 
-  <script src="/assets/js/main.js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+  <script src="./assets/js/main.js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
   </script>
 </body>
